# kalisi-demo

./: .gitignore  Cargo.toml  Dockerfile  README.md  install-runtime.sh  install.sh  push-to-ghcr.sh
scripts/: entrypoint.sh
src/: main.rs
static/: index.html
