[package]
name = "kalisi-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-files = "0.6"
openssl = { version = "0.10", features = ["v110"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
env_logger = "0.10"
redis = "0.23"
reqwest = "0.11"